fix broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
   justify-content: space-between;
   align-items: flex-end;
 
-  padding-top: 240px;
+  padding-top: 400px;
 }
 
 .header {
@@ -54,8 +54,7 @@ a:active {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  min-height: 100vh;
-  padding-bottom: 64px;
+  padding-bottom: 80px;
   justify-content: space-between;
 }
 
@@ -65,19 +64,16 @@ a:active {
   align-items: flex-start;
   justify-content: space-between;
   flex: 1;
-  margin-bottom: 80px;
+  margin-bottom:320px;
 }
 
 .logo {
   position: relative;
-  padding: 4px;
-  top: -4px;
-  left: -4px;
 }
 
 .logoImage {
-  width: 40px;
-  height: 40px;
+  width: 44px;
+  height: 44px;
 }
 
 .intro {
@@ -85,9 +81,9 @@ a:active {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
-  font-size: 48px;
-  letter-spacing: -0.48px;
-  line-height: 60px;
+  font-size: 64px;
+  letter-spacing: -0.64px;
+  line-height: 76px;
   /* text-wrap: balance;
   text-wrap: pretty; */
   font-weight: 500;
@@ -183,9 +179,9 @@ a:active {
   justify-content: flex-start; /* Aligns content to the left */
   padding: 32px; /* Add some spacing from edges */
 
-  font-size: 72px;
-  line-height: 72px;
-  letter-spacing: -0.72px;
+  font-size: 64px;
+  line-height: 64px;
+  letter-spacing: -0.64px;
   font-weight: 500;
 }
 
